Aggiunta altre funzionalità

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:name=".PersonalHealthMonitor"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/application_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PersonalHealthMonitor"
@@ -16,7 +16,6 @@
 
         <activity
             android:name=".view.MainActivity"
-            android:label="@string/title_activity_main"
             android:theme="@style/Theme.PersonalHealthMonitor.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +24,7 @@
         </activity>
 
         <activity
-            android:name=".view.report.ReportActivity"
+            android:name=".view.ReportActivity"
             android:theme="@style/Theme.PersonalHealthMonitor.NoActionBar" />
 
         <receiver
