--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.project.personal_health_monitor">
 
@@ -19,6 +18,7 @@
             android:theme="@style/Theme.PersonalHealthMonitor.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -27,12 +27,16 @@
             android:name=".view.ReportActivity"
             android:theme="@style/Theme.PersonalHealthMonitor.NoActionBar" />
 
+        <activity
+            android:name=".view.SettingsActivity"
+            android:theme="@style/Theme.PersonalHealthMonitor.NoActionBar" />
+
         <receiver
             android:name=".notification.Notification"
             android:exported="false" />
 
-        <service android:name=".notification.NotificationMaster" />
-
+        <service android:name=".notification.RememberToCreateReportNotificationService" />
+        <service android:name=".notification.ThresholdLimitReachedNotificationService" />
     </application>
 
 </manifest>
