--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
 
         <service android:name=".notification.RememberToCreateReportNotificationService" />
         <service android:name=".notification.ThresholdLimitReachedNotificationService" />
+        <service android:name=".notification.PostponeService" />
     </application>
 
 </manifest>
